Add javadoc in Blockchain class